tests/comp/sem/invalid/return_ref_from_void.mj
class A {

	/*** public void test(A foo) { return foo; } ***/

	public static void main(String[] args) {
	}

}
